# rinzler

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  latest-raw.json
docs/: zombienet-setup.md  zombienet.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/paratensor/: Cargo.toml
pallets/paratensor/rpc/: Cargo.toml
pallets/paratensor/rpc/src/: lib.rs
pallets/paratensor/runtime-api/: Cargo.toml
pallets/paratensor/runtime-api/src/: lib.rs
pallets/paratensor/src/: benchmarks.rs  block_step.rs  epoch.rs  lib.rs  networks.rs  registration.rs  serving.rs  staking.rs  subnet_info.rs  uids.rs  utils.rs  weights.rs
pallets/paratensor/tests/: block_step.rs  epoch.rs  mock.rs  networks.rs  registration.rs  serving.rs  staking.rs  sudo.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: rinzler_zombienet_config.toml  zombienet-setup.sh  zombienet.sh
specs/: finney_rococo_raw.json
