[package]
name = "paratensor-custom-rpc"
version = "0.0.2"
edition = "2021"
authors = ['Cameron Fairchild <https://github.com/camfairchild>']
repository = 'https://github.com/opentensor/paratensor'
description = "A pallet that adds custom RPC calls to paratensor"
license = "MIT"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
serde = { version = "1.0.132", features = ["derive"], default-features = false }

# Substrate packages
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }

# local packages

paratensor-custom-rpc-runtime-api = { version = "0.0.2", path = "../runtime-api", default-features = false }
pallet-paratensor = { version = "0.0.1-dev", path = "../../paratensor", default-features = false }

[features]
default = ["std"]
std = [
  "sp-api/std",
  "sp-runtime/std",
  "paratensor-custom-rpc-runtime-api/std"
]